# interview

./: .gitignore  CMakeLists.txt  README.md
function-templates/: CMakeLists.txt  main.cpp
is_unique/: CMakeLists.txt  main.cpp
longest_palindrome/: CMakeLists.txt  main.cpp
m01/: CMakeLists.txt
m02/: CMakeLists.txt  main.cpp
m03/: CMakeLists.txt  main.cpp
make_friends/: CMakeLists.txt
mvn01/: CMakeLists.txt  main.cpp
mvn02/: CMakeLists.txt  main.cpp
operator_auto/: CMakeLists.txt  main.cpp
print_sp/: CMakeLists.txt  main.cpp
rle/: CMakeLists.txt  main.cpp
roman-numerals/: CMakeLists.txt  main.cpp
rvo/: CMakeLists.txt  main.cpp
std_function/: CMakeLists.txt  main.cpp
struct_hier/: CMakeLists.txt  main.cpp
tfg_lifetime/: CMakeLists.txt  main.cpp
tfg_sharedptr/: CMakeLists.txt  main.cpp
